--- a/smartsoko/soko/templates/product_detail.html
+++ b/smartsoko/soko/templates/product_detail.html
@@ -1,126 +1,184 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
-{% block preloader %}
-<section class="preloader">
-    <div class="spinner">
-        <span class="sk-inner-circle"></span>
-    </div>
-</section>
-{% endblock %}
+{% block title %}Tooplate's Little Fashion - Product Detail{% endblock %}
 
-{% block navbar %}
-<nav class="navbar navbar-expand-lg">
-    <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <a class="navbar-brand" href="{% url 'index' %}">
-            <strong><span>Little</span> Fashion</strong>
-        </a>
-
-        <div class="d-lg-none">
-            <a href="{% url 'sign_in' %}" class="bi-person custom-icon me-3"></a>
-            <a href="{% url 'product_detail' %}" class="bi-bag custom-icon"></a>
-        </div>
-
-        <div class="d-none d-lg-block">
-            <a href="{% url 'sign_in' %}" class="bi-person custom-icon me-3"></a>
-            <a href="{% url 'product_detail' %}" class="bi-bag custom-icon"></a>
-        </div>
-    </div>
-</nav>
-{% endblock %}
-
-{% block header %}
-<header class="site-header section-padding d-flex justify-content-center align-items-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-12">
-                <h1>
-                    <span class="d-block text-primary">We provide you</span>
-                    <span class="d-block text-dark">Fashionable Stuffs</span>
-                </h1>
-            </div>
-        </div>
-    </div>
-</header>
+{% block extra_css %}
+<link rel="stylesheet" href="css/slick.css"/>
 {% endblock %}
 
 {% block content %}
-<section class="product-detail section-padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-12">
-                <div class="product-thumb">
-                    <img src="{% static 'images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg' %}" class="img-fluid product-image" alt="">
-                </div>
-            </div>
-
-            <div class="col-lg-6 col-12">
-                <div class="product-info d-flex">
-                    <div>
-                        <h2 class="product-title mb-0">Tree pot</h2>
-                        <p class="product-p">Original package design from house</p>
-                    </div>
-                    <small class="product-price text-muted ms-auto mt-auto mb-5">$25</small>
-                </div>
-
-                <div class="product-description">
-                    <strong class="d-block mt-4 mb-2">Description</strong>
-                    <p class="lead mb-5">Over three years in business, We’ve had the chance to work on a variety of projects, with companies</p>
-                </div>
-
-                <div class="product-cart-thumb row">
-                    <div class="col-lg-6 col-12">
-                        <select class="form-select cart-form-select" id="inputGroupSelect01">
-                            <option selected>Quantity</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                        </select>
-                    </div>
-
-                    <div class="col-lg-6 col-12 mt-4 mt-lg-0">
-                        <button type="submit" class="btn custom-btn cart-btn" data-bs-toggle="modal" data-bs-target="#cart-modal">Add to Cart</button>
-                    </div>
-
-                    <p>
-                        <a href="#" class="product-additional-link">Details</a>
-                        <a href="#" class="product-additional-link">Delivery and Payment</a>
-                    </p>
+<main>
+    <header class="site-header section-padding d-flex justify-content-center align-items-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-12">
+                    <h1>
+                        <span class="d-block text-primary">We provide you</span>
+                        <span class="d-block text-dark">Fashionable Stuffs</span>
+                    </h1>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </header>
 
+    <section class="product-detail section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-12">
+                    <div class="product-thumb">
+                        <img src="images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg" class="img-fluid product-image" alt="">
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-12">
+                    <div class="product-info d-flex">
+                        <div>
+                            <h2 class="product-title mb-0">Tree pot</h2>
+                            <p class="product-p">Original package design from house</p>
+                        </div>
+                        <small class="product-price text-muted ms-auto mt-auto mb-5">$25</small>
+                    </div>
+
+                    <div class="product-description">
+                        <strong class="d-block mt-4 mb-2">Description</strong>
+                        <p class="lead mb-5">Over three years in business, We've had the chance to work on a variety of projects, with companies</p>
+                    </div>
+
+                    <div class="product-cart-thumb row">
+                        <div class="col-lg-6 col-12">
+                            <select class="form-select cart-form-select" id="inputGroupSelect01">
+                                <option selected>Quantity</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                            </select>
+                        </div>
+
+                        <div class="col-lg-6 col-12 mt-4 mt-lg-0">
+                            <button type="submit" class="btn custom-btn cart-btn" data-bs-toggle="modal" data-bs-target="#cart-modal">Add to Cart</button>
+                        </div>
+
+                        <p>
+                            <a href="#" class="product-additional-link">Details</a>
+                            <a href="#" class="product-additional-link">Delivery and Payment</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="related-product section-padding border-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="mb-5">You might also like</h3>
+                </div>
+
+                <div class="col-lg-4 col-12 mb-3">
+                    <div class="product-thumb">
+                        <a href="product-detail.html">
+                            <img src="images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg" class="img-fluid product-image" alt="">
+                        </a>
+
+                        <div class="product-top d-flex">
+                            <span class="product-alert me-auto">New arrival</span>
+                            <a href="#" class="bi-heart-fill product-icon"></a>
+                        </div>
+
+                        <div class="product-info d-flex">
+                            <div>
+                                <h5 class="product-title mb-0">
+                                    <a href="product-detail.html" class="product-title-link">Tree pot</a>
+                                </h5>
+                                <p class="product-p">Original package design from house</p>
+                            </div>
+                            <small class="product-price text-muted ms-auto mt-auto mb-5">$25</small>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-12 mb-3">
+                    <div class="product-thumb">
+                        <a href="product-detail.html">
+                            <img src="images/product/jordan-nix-CkCUvwMXAac-unsplash.jpeg" class="img-fluid product-image" alt="">
+                        </a>
+
+                        <div class="product-top d-flex">
+                            <span class="product-alert">Low Price</span>
+                            <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
+                        </div>
+
+                        <div class="product-info d-flex">
+                            <div>
+                                <h5 class="product-title mb-0">
+                                    <a href="product-detail.html" class="product-title-link">Fashion set</a>
+                                </h5>
+                                <p class="product-p">Costume package</p>
+                            </div>
+                            <small class="product-price text-muted ms-auto mt-auto mb-5">$35</small>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-12">
+                    <div class="product-thumb">
+                        <a href="product-detail.html">
+                            <img src="images/product/nature-zen-3Dn1BZZv3m8-unsplash.jpeg" class="img-fluid product-image" alt="">
+                        </a>
+
+                        <div class="product-top d-flex">
+                            <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
+                        </div>
+
+                        <div class="product-info d-flex">
+                            <div>
+                                <h5 class="product-title mb-0">
+                                    <a href="product-detail.html" class="product-title-link">Juice Drinks</a>
+                                </h5>
+                                <p class="product-p">Nature made another world</p>
+                            </div>
+                            <small class="product-price text-muted ms-auto mt-auto mb-5">$45</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+{% endblock %}
+
+{% block extra_modals %}
 <!-- CART MODAL -->
-<div class="modal fade" id="cart-modal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="cart-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content border-0">
             <div class="modal-header flex-column">
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+
             <div class="modal-body">
                 <div class="row">
                     <div class="col-lg-6 col-12 mt-4 mt-lg-0">
-                        <img src="{% static 'images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg' %}" class="img-fluid product-image" alt="">
+                        <img src="images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg" class="img-fluid product-image" alt="">
                     </div>
+
                     <div class="col-lg-6 col-12 mt-3 mt-lg-0">
-                        <h3 class="modal-title">Tree pot</h3>
+                        <h3 class="modal-title" id="exampleModalLabel">Tree pot</h3>
                         <p class="product-price text-muted mt-3">$25</p>
-                        <p class="product-p">Quantity: <span class="ms-1">4</span></p>
+                        <p class="product-p">Quatity: <span class="ms-1">4</span></p>
                         <p class="product-p">Colour: <span class="ms-1">Black</span></p>
                         <p class="product-p pb-3">Size: <span class="ms-1">S/S</span></p>
+
                         <div class="border-top mt-4 pt-3">
                             <p class="product-p"><strong>Total: <span class="ms-1">$100</span></strong></p>
                         </div>
                     </div>
                 </div>
             </div>
+
             <div class="modal-footer">
                 <div class="row w-50">
                     <button type="button" class="btn custom-btn cart-btn ms-lg-4">Checkout</button>
@@ -131,39 +189,6 @@
 </div>
 {% endblock %}
 
-{% block footer %}
-<footer class="site-footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-10 me-auto mb-4">
-                <h4 class="text-white mb-3"><a href="{% url 'index' %}">Little</a> Fashion</h4>
-                <p class="copyright-text">
-                    &copy; 2022 <strong>Little Fashion</strong><br>
-                    Designed by <a href="https://www.tooplate.com/" target="_blank">Tooplate</a>
-                </p>
-            </div>
-
-            <div class="col-lg-5 col-8">
-                <h5 class="text-white mb-3">Sitemap</h5>
-                <ul class="footer-menu d-flex flex-wrap">
-                    <li class="footer-menu-item"><a href="{% url 'about' %}" class="footer-menu-link">Story</a></li>
-                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Products</a></li>
-                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy policy</a></li>
-                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">FAQs</a></li>
-                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Contact</a></li>
-                </ul>
-            </div>
-
-            <div class="col-lg-3 col-4">
-                <h5 class="text-white mb-3">Social</h5>
-                <ul class="social-icon">
-                    <li><a href="#" class="social-icon-link bi-youtube"></a></li>
-                    <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
-                    <li><a href="#" class="social-icon-link bi-instagram"></a></li>
-                    <li><a href="#" class="social-icon-link bi-skype"></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
+{% block extra_js %}
+<script src="js/slick.min.js"></script>
 {% endblock %}
